# HackEurope26

./: .env.local.example  .gitignore  CLAUDE.md  KNOWLEDGE_GRAPH_IMPLEMENTATION.md  QUICKSTART.md  README.md  SCHEMA.md  SCHEMA_UPDATES.md  package-lock.json  package.json
agents/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
agents/src/agents/: main.py  master_agent.py  server.py
agents/src/agents/config/: settings.py
agents/src/agents/integrations/: composio_client.py  forum.py  google_workspace.py
agents/src/agents/llm/: adapters.py  factory.py  protocols.py
agents/src/agents/sandbox/: __init__.py  command_executor.py  file_manager.py
agents/src/agents/storage/: context.py  convex_client.py
agents/src/agents/sub_agents/: explorer.py  knowledge_writer.py  structurer.py
agents/src/agents/tools/: definitions.py  executor.py  hybrid_executor.py  loop_detection.py
convex/: README.md  SCHEMA.md  agentEvents.ts  agentJobs.ts  auth.config.ts.disabled  clients.ts  composio.ts  contradictions.ts  dataItems.ts  dataSources.ts  demoData.ts  explorations.ts  forum.ts  forumGuides.ts  http.ts  knowledge.ts  knowledgeBase.ts  knowledgeGraph.ts  myFunctions.ts  organizations.ts  performanceReports.ts  pipeline.ts  questionnaires.ts  schema.ts  seed.ts  triggerPipeline.ts  verification.ts  visualizationGraph.ts
docs/: BLANK_PAGE_DEBUG.md  DAG_choices.md  DECISIONS.md  HANDOFF.md  Pitch_notes.md  Pitch_notes_Emeric.md  README.md  agent_pipeline.md  architecture.md  built.md
src/: App.tsx  DemoApp.tsx  GraphTest.tsx  GraphTestPage.tsx  (+3 more)
(+77 files in other folders)
